--- a/docs/_posts/2021-01-26-welcome.markdown
+++ b/docs/_posts/2021-01-26-welcome.markdown
@@ -4,6 +4,6 @@ title:  "Welcome"
 date:   2021-01-26 14:15:33 -0600
 categories: none
 ---
-![Bowling!](/leifrogers/assets/bowling.jpg)
+![Bowling!](/assets/bowling.jpg)
 
 First Post!
